# codes

./: .gitignore  README.md  Syllabus.yml  TODO.md  main_file.py
CMakeExp/module1/: CMakeLists.txt
CMakeExp/module2/: CMakeLists.txt
CMakeExp/module3/: CMakeLists.txt
algo/c++/: CMakeLists.txt
algo/c++/array/: lineartraversal.cpp
algo/c++/recursion/: printnhw.cpp  printnumbers.cpp  reversearray.cpp  sumall.cpp
assembly/: Makefile  hello.asm
c++/: CMakeLists.txt  README.md  build.sh
c++/Engine/: CMakeLists.txt
c++/Engine/src/: Engine.cpp  Engine.h
c++/Game/src/: Main.cpp
c++/src/: Log.cpp  Log.h  Main.cpp
c-programming/compiler/clangd/: flags.md
c-programming/pointers/: 01.c  a.out
compiler/lexical_analysis/c/: KEYWORDS.md  lexer.c  lexer.h  main.c  run.sh  testing.lua
cp/: time_it.sh
cp/Input/: Two_sum.txt
cp/how_to_take_input/: bufferpipe.py  normal1.py  normalstdin.py
cp/leetcode/: solution.py  twosum.py
cpp/controlflow/conditional/: break_continue.cpp  statements.cpp
cpp/controlflow/loops/: loops.cpp
cpp/io/: basicinstream.cpp  basicoutstream.cpp
cuda-programming/: compiler_options.txt  main.c  requriements.txt
data-structures/array/: a.out  binary-search.c  bubble-sort.c  counting-sort.c  linear-search.c  template.c
ignore/3d-mat/: 2d-plot-on-3d-canvas.py  3d-barplot.py  contour-plot-3D.py  create-empty-canvas.py
ignore/numpy/: 1.py
learn-cpp/Fundamentals/: Characteristics.md  Hisotric_prespecitve.md
learn-cpp/basic/: Excercise.md  basic_function_usage.cpp  helloworld.cpp
learn-cpp/iostreams/: standard_streams.cpp
learn-cpp/types_contants_variables/: limits.cpp  types.cpp
leetcode/: README.md
leetcode/array/: 3sum.py  containerwithmostwater.cpp  containerwithmostwater.py  longestcommonprefix.cpp  longestcommonprefix.py  medianoftwosortedarrays.cpp  rotateimage.cpp  searchinsertposition.cpp  twosum.cpp
llvm/kalidoscope/: .clang-format  CMakeLists.txt  README.md  build.sh
llvm/kalidoscope/examples/: drawcircle.kal
llvm/kalidoscope/include/: KaleidoscopeJIT.h
llvm/kalidoscope/src/: Errors.cpp  Errors.h  Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h  Target.cpp  Target.h
llvm/mlir_tutorial/: .gitignore  CMakeLists.txt  build.sh  install.sh
llvm/mlir_tutorial/lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
llvm/mlir_tutorial/lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyType.h  PolyType.td
llvm/mlir_tutorial/lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt  Passes.h  Passes.td
llvm/mlir_tutorial/lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  Passes.h  Passes.td
llvm/mlir_tutorial/tests/: affine_loop_unroll.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  ctlz.mlir  lit.cfg.py  mul_to_add.mlir  poly_canonicalization.mlir  poly_dialect.mlir  poly_to_standard.mlir
llvm/mlir_tutorial/tools/: CMakeLists.txt  toy-opt.cpp
lua/: lambda_fnc.lua  test.py
machine-learning/pandas/: 1dataframe.py
machine-learning/plotly/: empty-canvas-plotly.py
mini-projects/: tictactoe.py
mlir_tutorial/: .gitignore  CMakeLists.txt  README.md
mlir_tutorial/lib/Transform/Affine/: AffineFullUnroll.cpp  CMakeLists.txt
mlir_tutorial/src/Dialect/: test.mlir
mlir_tutorial/tools/: toy-opt.cpp
programming/cpp/: Makefile  firstprogram.cpp  functionprototyping.cpp  functions.cpp  giveerror.cpp  randomnumbers.cpp  types.cpp  volatilevar.cpp
python/: classes.py  py_builtins.py
python-programming/darkprinx/: README.md
python-programming/darkprinx/day1/: q1.py  q2.py  q3.py
python-programming/darkprinx/day2/: q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
python/standardLibraries/: abc_module.py
pytorch-cpp/gpu_programming/: test.cpp
pytorch-cpp/tensor/: TensorGeometry.cpp  TensorGeometry.h
scripts/: clean.sh
stl_learn/Arrays/: basic_array_setup.cpp
stl_learn/Vectors/: BasicOperation.cpp
unix_shell_programming/getting_started/: basic.sh  bc.sh  who.sh
